--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/splashscreen1.png
+    - assets/images/
     - assets/images/get_started.png
   fonts:
     - family: Sora
